master - Mini fix for education on mobile

--- a/Personal Website/Website/styles/education.scss
+++ b/Personal Website/Website/styles/education.scss
@@ -91,7 +91,7 @@
 @media screen and (max-width: 500px) and (orientation:portrait) {
 	.educationBody {
 		.mainLayer {
-
+			overflow:auto !important;
 			.educationTable {
 				margin-top: 0;
 				height: auto;
